Feature: API endpoint for sending (#278)
